[package]
name = "one-dot-909"
version = "0.1.0"
edition = "2021"
authors = ["Calacuda <pls-dont-email-me>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/calacuda/1.909"
description = "sample based, 909 style drum machine"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
hound = "3.5.1"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
rubato = "0.13"
rustc-hash = { version = "2.1.1", features = ["nightly"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
